2005-01-09  Daniel Macks  <dmacks@netspace.org>

	* Package.pm: Put off variable assignments in loop until after
	checking abort conditions.

2005-01-09  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: rewrite execute() build_as_nobody to use recursive
	wrapper (cuts down on system.log polution and fixes pipelines).
	
2005-01-06  Christian Schaffner  <chris01@users.sourceforge.net>

	* Configure.pm: Add conf_file_compat_version constant to indicate the 
	  current compatibility version of the fink.conf file.
	  Set the ConfFileCompatVersion to that value during configure.

2005-1-05  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Fixed processing of execute() return-code.

2005-1-05  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Try not to leave partially-installed buildlock pkg.

2005-1-05  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate.pm: Do 'apt-get update' *before* rebuilding aptdb.

2005-1-05  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: Added a delete_tempfile flag for execute().

2005-01-05  Christian Schaffner  <chris01@users.sourceforge.net>

	* PkgVersion.pm: Change wording for failed 'fink remove'.

2005-01-02  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* all: updated Copyright notice

2004-12-28  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Don't crash validator when given unknown filetypes.

2004-12-28  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: rewrote execute() to use sudo to drop to user="nobody"

2004-12-27  Chris Zubrzycki <beren12@users.sf.net>

	* PkgVersion.pm: Better description for removing stuck build locks

2004-12-22  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: Fixed prepare_script() removal of blank lines from
	middle of $script. Removed no-longer-needed hack from execute().

2004-12-21  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: prepare_script() may be leaking blank lines, so
	skip them in execute()'s execution loop.
